retrieving old data and updating per

--- a/Gaudet-Lander/run_qnet_nb.ipynb
+++ b/Gaudet-Lander/run_qnet_nb.ipynb
@@ -333,136 +333,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Inertia Tensor:  [[2000.    0.    0.]\n",
-      " [   0. 2000.    0.]\n",
-      " [   0.    0. 3200.]]\n",
-      "Lander Model: \n",
-      " - apf_v0:  70\n",
-      " - apf_vf1:  [ 0.  0. -2.]\n",
-      " - apf_vf2:  [ 0.  0. -1.]\n",
-      " - apf_atarg:  15.0\n",
-      " - apf_tau1:  20\n",
-      " - apf_tau2:  100.0\n",
-      "Attitude Constraint\n",
-      "Reward_terminal\n",
-      "lander env att 2 fixed\n",
-      "WARNING:tensorflow:From /home/callum/.local/lib/python3.6/site-packages/tensorflow/python/ops/clip_ops.py:157: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
-      "WARNING:tensorflow:From /home/callum/.local/lib/python3.6/site-packages/tensorflow/python/training/rmsprop.py:119: calling Ones.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Call initializer instance with the dtype argument instead of passing it to the constructor\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ecbe2df6d3ca4be6ae0b338098cb5114",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='bar_desc', max=50000.0, style=ProgressStyle(description_w…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*** ATT VIO TYPE CNT:  [0. 0. 1.]\n",
-      "*** ATT VIO TYPE CNT:  [ 0. 42. 60.]\n",
-      "*** ATT VIO TYPE CNT:  [  0.  54. 148.]\n",
-      "*** ATT VIO TYPE CNT:  [  0.  62. 240.]\n",
-      "*** ATT VIO TYPE CNT:  [  0. 130. 272.]\n",
-      "*** ATT VIO TYPE CNT:  [  0. 146. 356.]\n",
-      "*** ATT VIO TYPE CNT:  [  0. 172. 430.]\n",
-      "*** ATT VIO TYPE CNT:  [  0. 188. 514.]\n",
-      "*** ATT VIO TYPE CNT:  [  0. 221. 583.]\n",
-      "*** ATT VIO TYPE CNT:  [  0. 252. 652.]\n",
-      "*** ATT VIO TYPE CNT:  [  0. 279. 726.]\n",
-      "*** ATT VIO TYPE CNT:  [  0. 316. 789.]\n",
-      "*** ATT VIO TYPE CNT:  [  0. 353. 853.]\n",
-      "*** ATT VIO TYPE CNT:  [  0. 389. 917.]\n",
-      "*** ATT VIO TYPE CNT:  [  0. 440. 966.]\n",
-      "*** ATT VIO TYPE CNT:  [   0.  500. 1007.]\n",
-      "*** ATT VIO TYPE CNT:  [   0.  529. 1079.]\n",
-      "*** ATT VIO TYPE CNT:  [   0.  553. 1156.]\n",
-      "*** ATT VIO TYPE CNT:  [   0.  577. 1233.]\n",
-      "*** ATT VIO TYPE CNT:  [   0.  591. 1319.]\n",
-      "*** ATT VIO TYPE CNT:  [   0.  598. 1412.]\n",
-      "*** ATT VIO TYPE CNT:  [   0.  623. 1488.]\n",
-      "*** ATT VIO TYPE CNT:  [   0.  652. 1559.]\n",
-      "*** ATT VIO TYPE CNT:  [   0.  686. 1625.]\n",
-      "*** ATT VIO TYPE CNT:  [   0.  715. 1697.]\n",
-      "*** ATT VIO TYPE CNT:  [   0.  754. 1759.]\n",
-      "*** ATT VIO TYPE CNT:  [   0.  785. 1828.]\n",
-      "*** ATT VIO TYPE CNT:  [   0.  818. 1895.]\n",
-      "*** ATT VIO TYPE CNT:  [   0.  853. 1961.]\n",
-      "*** ATT VIO TYPE CNT:  [   0.  893. 2022.]\n",
-      "*** ATT VIO TYPE CNT:  [   0.  929. 2086.]\n",
-      "*** ATT VIO TYPE CNT:  [   0.  964. 2151.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1003. 2212.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1044. 2271.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1079. 2336.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1089. 2426.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1098. 2517.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1112. 2603.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1126. 2689.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1140. 2775.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1146. 2869.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1162. 2953.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1176. 3039.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1197. 3118.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1216. 3199.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1238. 3280.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1270. 3348.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1291. 3427.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1310. 3508.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1344. 3575.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1377. 3645.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1414. 3708.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1443. 3779.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1469. 3854.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1486. 3938.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1500. 4024.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1522. 4102.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1553. 4171.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1575. 4250.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1596. 4330.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1613. 4413.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1626. 4501.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1647. 4580.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1664. 4664.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1689. 4740.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1701. 4828.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1713. 4916.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1734. 4995.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1749. 5080.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1770. 5160.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1786. 5244.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1810. 5320.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1832. 5399.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1855. 5476.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1882. 5549.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1897. 5634.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1917. 5714.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1936. 5795.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1961. 5871.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 1975. 5957.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 2005. 6027.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 2023. 6110.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 2050. 6183.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "N_ep = 50000\n",
     "dmem=pickle.load(open('demo_disc.pkl','rb'))\n",
@@ -635,6 +506,13 @@
     "data_samp = pickle.load(open('lander_demo_test_20_3_mlp1.pkl','rb'))\n",
     "x,R = data_samp['R'].smooth()\n",
     "plt.plot(x,R)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using Prioritised Experience Replay"
    ]
   },
   {
